# MastermindSolver

./: CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main.cpp
players/: CMakeLists.txt  Challenger.cpp  Challenger.h  GameMaster.cpp  GameMaster.h
utils/: CMakeLists.txt  Color.cpp  Color.h  Guess.cpp  Guess.h  Result.h  Similarity.h  constants.h
